--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -42,7 +42,7 @@
       }
 
       .buttons {
-        button {
+        a {
           padding: 20px;
           border: 1px solid white;
           border-radius: 10px;
@@ -73,7 +73,7 @@
       bottom: 0;
     }
 
-    img{
+    img {
       width: 100%;
       height: 100%;
       object-fit: cover;
