--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -42,7 +42,7 @@
       }
 
       .buttons {
-        a {
+        button {
           padding: 20px;
           border: 1px solid white;
           border-radius: 10px;
