--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -13,7 +13,9 @@
     padding: 10px;
     flex-direction: column;
   }
-
+  .Toastify {
+    width: 0px !important;
+  }
   .textContainer {
     flex: 1;
     display: flex;
@@ -44,12 +46,11 @@
   .formContainer {
     flex: 1;
     position: relative;
-    
+
     @include mobile {
       padding: 50px;
       width: 100%;
     }
-
 
     .phoneSvg {
       stroke: orange;
